changed schdeule object to string scheduleID in taskrequest